--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@atesgoral/acb": "^0.4.0"
+    "@atesgoral/acb": "^0.4.0",
+    "acb": "github:jacobbubu/acb"
   }
 }
